2016-02-13  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/67260
	* gcc.target/sh/torture/pr67260.c: Adjust additional options.

2016-02-13  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/67260
	* gcc.target/sh/torture/pr67260.c: New.

2016-02-12  John David Anglin  <danglin@gcc.gnu.org>

	* gcc.dg/pr67964.c: Add dg-require-alias.

2016-02-13  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/67636
	PR target/64345
	* gcc.target/sh/pr54236-1.c: Adjust optimization level.

2016-02-12  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/69668
	* gfortran.dg/namelist_88.f90: New test.

2016-02-12  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/69668
	* gfortran.dg/namelist_38.f90: Update test.
	* gfortran.dg/namelist_84.f90: Update test.

2016-02-12  David Malcolm  <dmalcolm@redhat.com>

	PR other/69554
	* gcc.dg/pr69554-1.c: New test.
	* gfortran.dg/pr69554-1.F90: New test.
	* gfortran.dg/pr69554-2.F90: New test.
	* lib/gcc-dg.exp (proc dg-locus): New function.
	* lib/gfortran-dg.exp (proc gfortran-dg-test): Update comment to
	distinguish between the caret-printing and non-caret-printing
	cases.  If caret-printing has been explicitly enabled, bail out
	without attempting to fix up the output.

2016-02-12  David Malcolm  <dmalcolm@redhat.com>

	PR driver/69265
	PR driver/69453
	* gcc.dg/spellcheck-options-3.c: New test case.
	* gcc.dg/spellcheck-options-4.c: New test case.
	* gcc.dg/spellcheck-options-5.c: New test case.
	* gcc.dg/spellcheck-options-6.c: New test case.
	* gcc.dg/spellcheck-options-7.c: New test case.
	* gcc.dg/spellcheck-options-8.c: New test case.
	* gcc.dg/spellcheck-options-9.c: New test case.
	* gcc.dg/spellcheck-options-10.c: New test case.

2016-02-12  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/69764
	PR rtl-optimization/69771
	* c-c++-common/pr69764.c: New test.
	* gcc.dg/torture/pr69771.c: New test.

2016-02-12  Marek Polacek  <polacek@redhat.com>

	* g++.dg/torture/init-list1.C: New.
