@@ -1,3 +1,7 @@
+2016-02-14  Alan Modra  <amodra@gmail.com>
+
+	* gcc.c-torture/execute/stkalign.c: Revise test.
+
 2016-02-13  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	PR target/67260
